--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 					Bringing relief to their childhood neglect and showing them how to trust and love.
 					</p>				
 				</br>
-				<div align="center"><a href="book_leavingwithNPD.html"><img src="book/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;"></a></div>
-				<div align="center">Leaving with NPD</div>
+				<!--<div align="center"><a href="book_leavingwithNPD.html"><img src="book/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;"></a></div>
+				<div align="center">Leaving with NPD</div>-->
               </div>
             </div>
           </div>
