--- a/book_leavingwithNPD.html
+++ b/book_leavingwithNPD.html
@@ -48,7 +48,7 @@
 	</div>
 	
 	<!--<embed style="padding-top: 83px" id="frPDF" height="100%" width="100%" src="book/LeavingWithNPD.pdf"></embed>-->
-	<object data="https://docs.google.com/viewerng/viewer?url=https://www.choosefrequency.com/book/LeavingWithNPD.pdf"></object>
+	<object data="https://docs.google.com/viewerng/viewer?url=book/LeavingWithNPD.pdf"></object>
 	
     
 	<script src="js/core.min.js"></script>
