--- a/book_leavingwithNPD.html
+++ b/book_leavingwithNPD.html
@@ -48,7 +48,7 @@
 	</div>
 	
 	<!--<embed style="padding-top: 83px" id="frPDF" height="100%" width="100%" src="book/LeavingWithNPD.pdf"></embed>-->
-	<object data="https://docs.google.com/viewerng/viewer?url=book/LeavingWithNPD.pdf"></object>
+	<object data="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link"></object>
 	
     
 	<script src="js/core.min.js"></script>
