--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					Bringing relief to their childhood neglect and showing them how to trust and love.
 					</p>				
 				</br>
-				<div align="center"><a href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link"><img src="book/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;"></a></div>
+				<div align="center"><a href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank"><img src="images/books/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;"></a></div>
 				<div align="center">Leaving with NPD</div>
               </div>
             </div>
