--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="book_codependency.html">Book</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a>
                       </li>
