--- a/index.html
+++ b/index.html
@@ -340,6 +340,17 @@
                     <div class="item-subsection"><span class="item-subsection-title devider-left">David</span><span>Client</span></div>
                   </div>
                 </div>
+				<div class="item">
+                  <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/flower.jpg" alt="" width="216" height="108"/>
+                  </div>
+                  <div class="item-description wow fadeInUp" data-wow-delay=".3s">
+                    <p>Gosia helped me to identify and understand how I was sabotaging my marriage. It was a massive eye opener. 
+						I can say now I have a more nurturing and communicative husband and our unit is stronger than ever. 
+						Thank you.
+					</p>
+                    <div class="item-subsection"><span class="item-subsection-title devider-left">Manjula</span><span>Client</span></div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
