--- a/index.html
+++ b/index.html
@@ -308,6 +308,17 @@
               <h3 class="wow fadeInLeft text-capitalize text-center" data-wow-delay=".3s">What People Say<span class="text-primary"> About My Work</span></h3>
 			  <p style="text-align: center;">Due to the guarantee of full confidentiality, I did not use my clients surnames or pictures below.</p>
               <div class="owl-carousel review-carousel" data-items="1" data-sm-items="1" data-md-items="1" data-lg-items="1" data-xl-items="1" data-xxl-items="1" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="false" data-margin="0" data-mouse-drag="true" data-autoplay="false">
+			     <div class="item">
+                  <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/marguerite.jpg" alt="" width="216" height="108"/>
+                  </div>
+                  <div class="item-description wow fadeInUp" data-wow-delay=".3s">
+                    <p> I can’t express my gratefulness for Gosia, she has special powers to inspire people and after two sessions I received a job offer, before for 6 months I was sending CV for no answers. 
+						Gosia took me to a very deep meditative stage, it was great experience, to find where my fear is coming from and transformed it, I feel more and more free. 
+						My life changed massively, I can dream again and can plan my future, before I was quite depressed. Thank you Gosia, you are wonderful Master.
+					</p>
+                    <div class="item-subsection"><span class="item-subsection-title devider-left">Rita</span><span>Client</span></div>
+                  </div>
+                </div>
                 <div class="item">
                   <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/marguerite.jpg" alt="" width="216" height="108"/>
                   </div>
