--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 			  <p style="text-align: center;">Due to the guarantee of full confidentiality, I did not use my clients surnames or pictures below.</p>
               <div class="owl-carousel review-carousel" data-items="1" data-sm-items="1" data-md-items="1" data-lg-items="1" data-xl-items="1" data-xxl-items="1" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="false" data-margin="0" data-mouse-drag="true" data-autoplay="false">
 			     <div class="item">
-                  <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/marguerite.jpg" alt="" width="216" height="108"/>
+                  <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/Flower01.png" alt="" width="216" height="108"/>
                   </div>
                   <div class="item-description wow fadeInUp" data-wow-delay=".3s">
                     <p> I can’t express my gratefulness for Gosia, she has special powers to inspire people and after two sessions I received a job offer, before for 6 months I was sending CV for no answers. 
@@ -352,7 +352,7 @@
                   </div>
                 </div>
 				<div class="item">
-                  <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/flower.jpg" alt="" width="216" height="108"/>
+                  <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/flower2.png" alt="" width="216" height="108"/>
                   </div>
                   <div class="item-description wow fadeInUp" data-wow-delay=".3s">
                     <p>Gosia helped me to identify and understand how I was sabotaging my marriage. It was a massive eye opener. 
