--- a/index.html
+++ b/index.html
@@ -362,6 +362,16 @@
                     <div class="item-subsection"><span class="item-subsection-title devider-left">Manjula</span><span>Client</span></div>
                   </div>
                 </div>
+				<div class="item">
+                  <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/flower3.png" alt="" width="216" height="108"/>
+                  </div>
+                  <div class="item-description wow fadeInUp" data-wow-delay=".3s">
+                    <p>First reading with Gosia and she nailed my past. She's direct, honest and empathic on her readings . Had a very good session and will follow her advice for a better future. 
+					   Thank you Gosia x
+					</p>
+                    <div class="item-subsection"><span class="item-subsection-title devider-left">Maria</span><span>Client</span></div>
+                  </div>
+                </div>				
               </div>
             </div>
           </div>
