--- a/Ruth/index.html
+++ b/Ruth/index.html
@@ -59,12 +59,12 @@
             <div class="row">
                 <div class="col-lg-8 text-white mx-auto text-center">
 
-                    <h1 class="display-3 spell-one fw-bold text-center"> It's Best Agricultural Farm</h1>
+                    <h1 class="display-3 spell-one fw-bold text-center"> MAGIC LIVES WITHIN YOU. </br> IT IS YOU</h1>
 
                     <div class="spell-two">
-                        <h3 class="card-title text-bold">Green Farm</h3>
+                        <h3 class="card-title text-bold">Peace begins when you let go of the inner pain from deep within</h3>
 
-                        <p class="h5">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <!--<p class="h5"></p>-->
                         <div class="my-5">
                             <a class="btn-two" href="#">join us</a>
                         </div>
