--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a>
-                      </li>
+                      <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a>
+                      </li>-->
                       <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
@@ -177,8 +177,8 @@
 					Bringing relief to their childhood neglect and showing them how to trust and love.
 					</p>				
 				</br>
-				<div align="center"><a href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank"><img src="images/books/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;"></a></div>
-				<div align="center">Leaving with NPD</div>
+				<!--<div align="center"><a href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank"><img src="images/books/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;"></a></div>
+				<div align="center">Leaving with NPD</div>-->
               </div>
             </div>
           </div>
