--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
                     </ul>
                   </div>
                 </div>
+ 				<div class="rd-navbar-panel">
+					<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>
+				</div>
+			
               </div>
             </div>
           </nav>
