--- a/about.html
+++ b/about.html
@@ -74,16 +74,19 @@
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="about.html">About</a>
-					  </li>
-					  <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a>
-                      </li>-->
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
+                      </li>
+					  <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a></li>-->
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                       </li>
                     </ul>
                   </div>
                 </div>
+				<div class="rd-navbar-panel">
+					<!--<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>-->
+					<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
+				</div>				
               </div>
             </div>
           </nav>
