--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                   </div>
                 </div>
  				<div class="rd-navbar-panel">
-					<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>
+					<!--<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>-->
+					<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
 				</div>
 			
               </div>
@@ -257,7 +258,7 @@
       </section>
   
       <!--Pricing-->
-      <section class="section section-md bg-xs-overlay prices" style="background:url('images/bg-image-3-1700x883.jpg')no-repeat;background-size:cover">
+      <section id="pricing" class="section section-md bg-xs-overlay prices" style="background:url('images/bg-image-3-1700x883.jpg')no-repeat;background-size:cover">
         <div class="container">
           <div class="row row-50 justify-content-center">
             <div class="col-12 text-center col-md-10 col-lg-8">
