--- a/thankyou.html
+++ b/thankyou.html
@@ -83,6 +83,10 @@
                     </ul>
                   </div>
                 </div>
+				<div class="rd-navbar-panel">
+					<!--<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>-->
+					<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
+				</div>				
               </div>
             </div>
           </nav>
