--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
  				<div class="rd-navbar-panel">
 					<!--<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>-->
-					<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
+					<a class="button button-190 button-circle btn-primary-rounded" href="#pricing">book session</a>
 				</div>
 			
               </div>
