--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
  				<div class="rd-navbar-panel">
 					<!--<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>-->
-					<a class="button button-190 button-circle btn-primary-rounded" href="#pricing">book session</a>
+					<a class="button button-190 button-circle btn-primary-rounded" href="#pricing">book free session</a>
 				</div>
 			
               </div>
@@ -271,9 +271,9 @@
             <div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
               <div class="pricing-box bg-gray-dark">
                 <div class="pricing-box-tittle">Starter</div>
-                <p>Initial session</p>
+                <p>Initial session 30 min</p>
                 <hr/>
-                <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">39</span></div>
+                <div class="pricing-box-inner"><span class="pricing-box-symbol"></span><span class="pricing-box-price">Free</span></div>
                 <div class="pricing-box-label bg-gray">once</div>
                 <p>Verifying goals <br> Setting Up Strategy <br> Zoom meeting</p>
 				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/starter'});return false;">get started</a>
