--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">69</span></div>
                 <div class="pricing-box-label bg-gray-primary-light">1 session</div>
-                <p>Reprogramming Subconscious Mind <br> Inviting Abundance To Life <br> Zoom meeting</p>
+                <p> Enhancing Spiritual Gifts <br> Inviting Abundance To Life <br> Zoom meeting</p>
 				<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/experience'});return false;">get started</a>
               </div>
             </div>
-            <div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
+           <!--<div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
               <div class="pricing-box bg-gray-dark">
                 <div class="pricing-box-tittle">Package</div>
                 <p>Investment</p>
@@ -300,7 +300,7 @@
                 <p>Creating a new reality <br> Enhancing Spiritual Gifts <br> Zoom meetings</p>
 				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/package'});return false;">book first session</a>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </section>
