--- a/index.html
+++ b/index.html
@@ -324,6 +324,19 @@
                     <div class="item-subsection"><span class="item-subsection-title devider-left">Rita</span><span>Client</span></div>
                   </div>
                 </div>
+			     <div class="item">
+                  <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/flower_yellow.jpg" alt="" width="216" height="108"/>
+                  </div>
+                  <div class="item-description wow fadeInUp" data-wow-delay=".3s">
+                    <p> I saw Gosia a month ago about my phobia of lizards, at first I didn't know what to expect but Gosia is amazing. 
+						She went at my pace and 4 weeks later I am able to watch videos, touch rubber lizards and talk about them without any anxiety! To the point my phone screen saver is a beautiful image of the reptile! 
+						Gosia makes you feel relaxed within a safe environment and would recommend this experience to anyone to try!
+						Looking forward to traveling to tropical countries without the childhood fear that I’ve had for over 40 years.
+						Thank you , you have made a really difference.
+					</p>
+                    <div class="item-subsection"><span class="item-subsection-title devider-left">Samira</span><span>Client</span></div>
+                  </div>
+                </div>				
                 <div class="item">
                   <div class="item-preview wow fadeInDown" data-wow-delay=".2s"><img src="images/marguerite.jpg" alt="" width="216" height="108"/>
                   </div>
