--- a/index.html
+++ b/index.html
@@ -171,17 +171,16 @@
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by <span class="default-letter-spacing font-weight-bold ">narcissistic abuse</span> or painful experiences. 
 					I help my clients to refocus from trauma bond, cognitive dissonance, or narcissistic abuse towards their potential and start exploring its true nature.</p>
-                <!--<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
-				<a href="https://coach-accreditation.services/" target="_blank">
-					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="Girl in a jacket" width="500" height="600">
-					<div style="text-align: center;">www.coach-accreditation.services</div>-->
-				</a>
-				<div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
+               <div align="center"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I can help people with a <span class="default-letter-spacing font-weight-bold ">narcissistic personality disorder</span>. 
 					Bringing relief to their childhood neglect and showing them how to trust and love.
 					</p>				
-				</br>
+				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
+				<a href="https://coach-accreditation.services/" target="_blank">
+					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="Girl in a jacket" width="250" height="300">
+					www.coach-accreditation.services
+				</a>
 				<!--<div align="center"><a href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank"><img src="images/books/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;"></a></div>
 				<div align="center">Leaving with NPD</div>-->
               </div>
