--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                       </li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="terms.html">Terms&Conditions</a></li>
                     </ul>
                   </div>
                 </div>
