--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>Contacts</title>
+    <title>Terms and Conditions</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -78,15 +78,12 @@
                       </li>
 					  <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a></li>-->
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a></li>
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
-					  <li class="rd-nav-item"><a class="rd-nav-link" href="terms.html">Terms&Conditions</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
+					  <li class="rd-nav-item active"><a class="rd-nav-link" href="terms.html">Terms&Conditions</a></li>
                     </ul>
                   </div>
                 </div>
-				<div class="rd-navbar-panel">
-					<!--<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency'});return false;">book session</a>-->
-					<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
-				</div>
+				
               </div>
             </div>
           </nav>
@@ -97,10 +94,8 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-8 text-center">
-              <h1 class="font-weight-bold wow fadeInLeft">Contact Me</h1>
+              <h1 class="font-weight-bold wow fadeInLeft">Terms and Conditions</h1>
 			  <h3 class="font-weight-bold wow fadeInLeft">call: +44 7758748210</h3></br></br>
-              <h3 class="font-weight-bold wow fadeInLeft">or send your questions below</h3>
-			  <p class="intro-description wow fadeInRight">I usually respond within 24 hours.</p>
             </div>
           </div>
         </div>
@@ -110,32 +105,73 @@
         <div class="container">
           <!--RD Mailform-->
           <div class="row justify-content-center">
-            <div class="col-xl-6 col-md-8 col-12">
+            <div class="col-xl-8 col-md-8 col-12">
 
 			
-              <form id="contact-form1" action="https://formsubmit.co/0bd0283d384637ed1280ef44ac4b2195" method="POST"> 
-				<input type="hidden" name="_subject" value="QUESTION FROM THE WEBSITE">
-				<input type="hidden" name="_next" value="https://choosefrequency.com/thankyou.html">
-                <div class="form-wrap">
-                  <label class="form-label" for="contact-name">Name<span class="req-symbol">*</span></label>
-                  <input class="form-input" id="contact-name" type="text" name="name" data-constraints="@Required">
-                </div>
-                <div class="form-wrap">
-                  <label class="form-label" for="contact-email">E-Mail<span class="req-symbol">*</span></label>
-                  <input class="form-input" id="contact-email" type="email" name="email" data-constraints="@Required @Email">
-                </div>
-                <div class="form-wrap">
-                  <label class="form-label label-textarea" for="contact-message">Message<span class="req-symbol">*</span></label>
-                  <textarea class="form-input" id="contact-message" name="message" data-constraints="@Required" rows="10"></textarea>
-                </div>
-                <!--Google captcha-->
-                <!--<div class="form-wrap text-left form-validation-left">
-                  <div class="recaptcha" id="captcha1" data-sitekey="6LeW0e4hAAAAAIzPf6U0JmlROpOVqoP4ROs5z926"></div>
-                </div>-->
-				<div class="form-button group-sm text-center text-lg-left">
-					<button class="button button-primary" type="submit">Submit</button>
-                </div>
-              </form>
+			<div>
+			<h3 class="wow fadeInLeft">My Responsibilities</h3>
+			<p>
+			Provide service to clients solely in those areas in which I am competent to do so and for
+			which I carry relevant professional indemnity insurance. A copy of my insurance is available on
+			request.
+			“Competency” means adequate training, skills and experience but need not exclude treating a client
+			for a condition which the practitioner has not treated before, provided that due diligence and
+			professionalism is observed. 
+			Act in a non-biased, non-prejudicial manner towards all clients, providing those clients with an
+			identical quality of service and treatment irrespective of the many differences which are to be found
+			between clients, including but not restricted to: race, gender, sexual orientation, disability etc.
+			Disclose full details of all relevant memberships, training, experience, qualifications and appropriate
+			avenues of complaint to clients upon request and only use those qualifications and memberships to
+			which they have proof of entitlement.
+			Explain fully to clients in advance of any treatment: the fee levels, precise terms of payment and any
+			charges which might be imposed for non-attendance or cancelled appointments, and wherever
+			relevant, confidentiality issues.
+			Present all services and products in an unambiguous manner (to include any limitations and realistic
+			outcomes of treatment) and ensure that the client retains complete control over the decision to
+			purchase such services or products.  N.B. Guarantees of either a cure or a successful resolution of
+			the problem/s presented shall not be offered.
+			I will adhere to and uphold the code of ethics of the IAPC&amp;M A copy of this code of ethics is also
+			available to the client at all times.
+			</p>
+			</div>
+			<br>
+			<div>
+			<h3 class="wow fadeInLeft">Your Responsibilities</h3>
+			<p>
+			As the Client, you also have responsibilities in your work with me.
+			First, it is your responsibility to turn up for your sessions. When possible, client sessions are set up on
+			a regular schedule, which is not just for the convenience of my scheduling. The regularity of your
+			sessions is an important part of your &quot;inside&quot; work. When circumstances happen that are beyond your
+			control I will work to find a way round this for you.
+			Your second responsibility is to take seriously the work we are doing – to cooperate with requests to
+			do any &quot;homework&quot; given to you, and to spend time between sessions thinking, exploring and
+			experimenting in the areas we are working on together.
+			You are responsible for being as open and honest with us as is possible. At times this may be your
+			greatest challenge in therapy. And it is my pledge to encourage and honour the specific trust involved
+			in your openness with me.
+			You are expected to be free of the influence of alcohol and drugs, except with the specific knowledge
+			and approval of the therapist.
+			<br>
+			Below are terms of the contract:
+			<ul class="ul-bullets">
+			<li>The therapy session will last for aproximatly 60 minutes </li>
+			<li>If the client is late for the appointment, the session cannot be extended  </li>
+			<li>The first session is used as an opportunity to clarify the client’s reason for coming and
+			to take some personal history and details and can be up to 90 minutes long </li>
+			<li>If you are unable to keep an appointment then please give me a call with at least 24 hours
+			notice </li>
+			<li>The full fee will be charged for missed appointments where there is no notification and
+			for sessions cancelled with less than 24 hours notice </li>
+			<li>The service offered is confidential. Brief notes are kept during therapy but these will be
+			stored separately from your personal details and will be in a secure location  </li>
+			<li>Your therapist has regular supervision on a monthly basis  </li>
+			<li>If you give me reason to believe that you will cause other people harm or yourself then
+			I will take the appropriate action on advice from my supervisory body. If you openly confide
+			in me that you are a terrorist, a drug dealer or are involved in money laundering I am duty
+			bound to inform the police </li>
+			</ul>
+			</p>
+			</div>
             </div>
           </div>
         </div>
