--- a/about.html
+++ b/about.html
@@ -74,12 +74,12 @@
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="about.html">About</a>
                       </li>
 					  <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a></li>-->
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA">YouTube</a></li>
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contacts</a>
-                      </li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="terms.html">Terms&Conditions</a></li>
                     </ul>
                   </div>
                 </div>
