--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
               <div class="pricing-box bg-gray-primary">
                 <div class="pricing-box-tittle">Experience</div>
-                <p>Changing life session</p>
+                <p>Changing life session 60 min</p>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">79</span></div>
                 <div class="pricing-box-label bg-gray-primary-light">1 session</div>
