--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <div class="section-name wow fadeInRight" data-wow-delay=".2s">Pricing Options</div>
               <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">Find the perfect plan for<span class="text-primary"> your soul</span></h3>
 <!--              <p class="wow price">I offer three different pricing plans that can help to fulfill my client's needs. Feel free to select a preferable plan or learn more about each of them below.</p>-->
-              <p class="wow price">I offer a first free welcoming session to talk about your needs and goals. We both can check if we can work together and what can be achieved.</p>
+              <p class="wow price">I offer a first free welcoming session to talk about your needs and goals.<br> We both can check if we can work together and what can be achieved.</p>
             </div>
           </div>
           <div class="row row-30 justify-content-center">
