--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
 				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
 				<a href="https://coach-accreditation.services/" target="_blank">
 					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="Girl in a jacket" width="250" height="300">
-					www.coach-accreditation.services
+				</a>
+				<a href="https://www.evolvelifecoachingcollege.com/" target="_blank">
+					<img src="images/EvolveLogo.jpg" alt="Girl in a jacket" width="210">
 				</a>
 				<!--<div align="center"><a href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank"><img src="images/books/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;"></a></div>
 				<div align="center">Leaving with NPD</div>-->
