--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
             </div>
           </div>
           <div class="row row-50 justify-content-center">
-            <div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+            <div class="col-xl-3 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="team-classic-wrap">
                 <div class="team-classic-img"><img src="images/TealSwan.jpg" alt="" width="370" height="198"/>
                 </div>
@@ -176,7 +176,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-4 col-sm-6 col-10 wow fadeInUp" data-wow-delay=".3s">
+			<div class="col-xl-3 col-sm-6 col-10 wow fadeInUp" data-wow-delay=".3s">
+              <div class="team-classic-wrap">
+                <div class="team-classic-img"><img src="images/johnmill.jpg" alt="" width="370" height="198"/>
+                </div>
+                <div class="block-320 text-center">
+                  <h4 class="font-weight-bold">John Mill</h4><a href="https://www.johnmill.co.uk" target="_blank">www.johnmill.co.uk</a>
+                  <p>Dip.Hyp/Psych.Adv. Counsellor. Master Life Coach. CEO/Founder of Evolve Life Coaching College.</p>
+                  <hr class="offset-top-40"/>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-10 wow fadeInUp" data-wow-delay=".3s">
               <div class="team-classic-wrap">
                 <div class="team-classic-img"><img src="images/DrBruceLipton.jpg" alt="" width="370" height="198"/>
                 </div>
@@ -187,7 +198,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-4 col-sm-6 col-10 wow fadeInRight" data-wow-delay=".3s">
+            <div class="col-xl-3 col-sm-6 col-10 wow fadeInRight" data-wow-delay=".3s">
               <div class="team-classic-wrap">
                 <div class="team-classic-img"><img src="images/DrShaminiJain.jpg" alt="" width="370" height="198"/>
                 </div>
